# data_lake_brief_2

./: DATABRICKS_Notebook.ipynb  README.md  pyproject.toml
application/: main.py  main_csv.py  upload_csv.py  upload_parquet_file.py
application/fonctions/: security_func.py  upload_func.py
