[tool.poetry]
name = "data-lake-brief-2"
version = "0.1.0"
description = ""
authors = ["Gwhite <guilhem.dolet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
azure-identity = "^1.19.0"
azure-storage-blob = "^12.24.0"
python-dotenv = "^1.0.1"
azure-keyvault-secrets = "^4.9.0"
pandas = "^2.2.3"
pyarrow = "^18.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
